@@ -2,6 +2,7 @@
 
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-ruby-fakegem): Add
 	ruby-fakegem eclass
+	(ebuild-mode-keywords-ruby-ng): Add ruby-ng eclass
 
 2009-12-15  Christian Faulhammer  <fauli@gentoo.org>
 
